--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Image Fetcher Express</title>
+  <title>Img Express</title>
   <link href="./src/input.css" rel="stylesheet">
   <link href="./src/output.css" rel="stylesheet">
 </head>
